fix footer alignment

--- a/themes/Malara/static/css/malara.css
+++ b/themes/Malara/static/css/malara.css
@@ -287,7 +287,7 @@ footer {
 
 footer > .content {
     max-width: 935px;
-    margin: 1.5em;
+    margin: 1.5em auto;
     font-size: 0.9em;
 }
 
